# LLM-Calc

./: .gitignore  .replit  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  index.css  main.tsx
src/components/: Layout.tsx  ThemeToggle.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  slider.tsx  toast.tsx  toaster.tsx
src/hooks/: use-toast.ts
